# catalyst

./: .gitignore  CHANGELOG.md  README.md  main.py  patch_as_completed.py  patch_as_completed2.py  patch_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.jules/: bolt.md  warden.md
benchmarks/: run_benchmarks.py
core/: config.py  dag.py  engine.py  logging.py  plugin.py  resolver.py
lab/: run_tests.py
lab/tests/: test_dag.py  test_engine.py  test_integration.py  test_performance.py  test_plugins.py
plugins/: __init__.py
plugins/builtin/: __init__.py  cache.py  cache.yaml  database.py  database.yaml  docker.py  docker.yaml  http.py  notify.py  notify.yaml  shell.py
src/catalyst/domain/: engine.py
src/catalyst/presentation/api/: main.py
tests/: test_api.py  test_api_security.py  test_async_unwrapper.py  test_bottleneck.py  test_coverage_edge_cases.py  test_engine.py  test_fail_fast.py  test_interrupts.py
tests/presentation/api/: test_main.py
