[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst"
version = "0.3.0"
description = "High-performance workflow orchestration engine with DAG-based parallel execution"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Shenald", email = "shenald@example.com"}]
keywords = ["workflow", "orchestration", "dag", "async", "parallel", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0; platform_system!='Windows'",  # Optional on Windows due to encoding issues
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "aiohttp>=3.9",  # for http plugin
    "aiosqlite>=1.0",  # for database plugin
    "asyncpg>=0.29",  # for database plugin (PostgreSQL)
    "aioredis>=2.0",  # for cache plugin
    "prometheus-client>=0.19",  # for metrics
    "opentelemetry-api>=1.20",  # for tracing
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

all = [
    "pyyaml>=6.0; platform_system!='Windows'",
    "aiohttp>=3.9",
    "aiosqlite>=1.0",
    "asyncpg>=0.29",
    "aioredis>=2.0",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.scripts]
catalyst = "main:main"

[project.urls]
Homepage = "https://github.com/shenald-dev/catalyst"
Documentation = "https://github.com/shenald-dev/catalyst#readme"
Repository = "https://github.com/shenald-dev/catalyst.git"
Issues = "https://github.com/shenald-dev/catalyst/issues"
Changelog = "https://github.com/shenald-dev/catalyst/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["core", "plugins", "plugins.builtin"]

[tool.setuptools.package-data]
"plugins.builtin" = ["*.yaml"]
