[project]
name = "catalyst"
version = "0.1.4"
description = "High-performance workflow engine for complex pipelines. Parallel DAG execution, <1s sorts, zero bloat."
authors = [
    { name = "shenald-dev", email = "bot@shenald.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.3",
    "networkx>=3.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
